apps/production/client-sites/juanita-gomez/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juanita-gomez
  namespace: lulo-demo-landings
  labels:
    app: juanita-gomez
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juanita-gomez
  template:
    metadata:
      labels:
        app: juanita-gomez
        name: juanita-gomez
    spec:
      containers:
      - name: juanita-gomez
        image: "registry.yesidlopez.de/juanita-gomez:v1.0.23" # {"$imagepolicy": "lulo-demo-landings:juanita-gomez"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
      - name: registry-secret
