apps/production/client-sites/juanita-gomez/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: juanita-gomez
  name: juanita-gomez
  namespace: lulo-demo-landings
spec:
  selector:
    app: juanita-gomez
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
