apps/production/client-sites/juanita-gomez/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juanita-gomez
  namespace: lulo-demo-landings
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - juanita-gomez.demo.luloai.com
      secretName: juanita-gomez-tls
  rules:
    - host: juanita-gomez.demo.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juanita-gomez
                port:
                  number: 3000
